[gd_scene load_steps=17 format=3 uid="uid://ba2comoj2jbjy"]

[ext_resource type="Texture2D" uid="uid://db4ucfjai44ex" path="res://resources/textures/HUD elements/healthBarBG.svg" id="1_bxty2"]
[ext_resource type="Script" uid="uid://cviltlgpung0i" path="res://Components/HUD/HUD.gd" id="1_maspd"]
[ext_resource type="Texture2D" uid="uid://bdrpkqh4kbx2v" path="res://resources/textures/HUD elements/a/Screenshot_20250606_182749.png" id="1_qefu1"]
[ext_resource type="Texture2D" uid="uid://bwoyg0dwj6e2b" path="res://resources/textures/HUD elements/healthBar.svg" id="3_ryf3e"]
[ext_resource type="Script" uid="uid://b0jv1id6kh0fg" path="res://Scripts/InventoryUI.gd" id="4_4es50"]
[ext_resource type="Texture2D" uid="uid://cpif3pb3wkvky" path="res://resources/textures/HUD elements/a/mpv-shot0001.jpg" id="4_nqbc8"]
[ext_resource type="PackedScene" uid="uid://chf34ya77hulb" path="res://Components/hud_slot/hud_slot.tscn" id="5_rxypr"]
[ext_resource type="Texture2D" uid="uid://dayql0peiw41q" path="res://resources/textures/HUD elements/ball.svg" id="6_d8qfv"]
[ext_resource type="Script" uid="uid://7aggow60vq7h" path="res://z/pew_pew_timer.gd" id="6_pve3o"]
[ext_resource type="Texture2D" uid="uid://cumdqn2x3yxov" path="res://resources/textures/zombs/sactx-0-2048x2048-Crunch-IconsUI-1b360a8c.png" id="7_7of6o"]
[ext_resource type="LabelSettings" uid="uid://cadmyaswo6d3d" path="res://resources/misc/label_settings.tres" id="7_ccrdf"]
[ext_resource type="Texture2D" uid="uid://c4cedbk273oag" path="res://resources/textures/HUD elements/inner ball.svg" id="7_kkonv"]
[ext_resource type="LabelSettings" uid="uid://c3lbruinehu33" path="res://resources/misc/label_settings_2.tres" id="9_d8qfv"]
[ext_resource type="Script" uid="uid://dee0ls4be3d4i" path="res://Components/ammo_count/ammo_count.gd" id="14_b0d78"]
[ext_resource type="PackedScene" uid="uid://c26inunqq86yf" path="res://Components/ammo_count/ammo_count.tscn" id="14_lwwil"]

[sub_resource type="LabelSettings" id="LabelSettings_kn30k"]
font_size = 45

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_maspd")

[node name="Unused" type="Node2D" parent="."]
visible = false

[node name="healthBar" type="Sprite2D" parent="Unused"]
visible = false
position = Vector2(-13, 1023)
texture = ExtResource("3_ryf3e")
offset = Vector2(205, 0)

[node name="refpic" type="Sprite2D" parent="Unused"]
visible = false
position = Vector2(960, 540)
texture = ExtResource("1_qefu1")

[node name="refpic2" type="Sprite2D" parent="Unused"]
position = Vector2(960, 540)
texture = ExtResource("4_nqbc8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
script = ExtResource("4_4es50")

[node name="PewPewTimer" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = 70.5
offset_right = 158.5
offset_bottom = 259.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.31, 0.31)
script = ExtResource("6_pve3o")

[node name="Label" type="Label" parent="Control/PewPewTimer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_kn30k")

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control/PewPewTimer"]
layout_mode = 0
offset_right = 189.0
offset_bottom = 189.0
value = 100.0
fill_mode = 4
radial_initial_angle = 360.0
texture_under = ExtResource("6_d8qfv")
texture_progress = ExtResource("7_kkonv")

[node name="HealthBar" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBarBG" type="Sprite2D" parent="Control/HealthBar"]
texture_filter = 5
position = Vector2(205, 1031)
scale = Vector2(1.116, 1.134)
texture = ExtResource("1_bxty2")

[node name="HealthBar" type="TextureProgressBar" parent="Control/HealthBar"]
texture_filter = 5
layout_mode = 0
offset_left = 22.0
offset_top = 1004.0
offset_right = 392.0
offset_bottom = 1062.0
value = 100.0
texture_progress = ExtResource("3_ryf3e")

[node name="HealthNum" type="Label" parent="Control/HealthBar"]
layout_mode = 0
offset_left = 43.0
offset_top = 1022.0
offset_right = 113.0
offset_bottom = 1045.0
text = "100 / 100"
label_settings = ExtResource("7_ccrdf")

[node name="AmmoCount" type="HBoxContainer" parent="Control"]
layout_direction = 3
layout_mode = 0
offset_left = 1563.0
offset_top = 940.0
offset_right = 1626.0
offset_bottom = 969.0

[node name="Panel" type="Panel" parent="Control/AmmoCount"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Bullet" type="Sprite2D" parent="Control/AmmoCount/Panel"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_7of6o")
centered = false

[node name="spacer" type="Panel" parent="Control/AmmoCount"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="BulletCount2" type="Label" parent="Control/AmmoCount"]
self_modulate = Color(1, 1, 1, 0.643137)
layout_mode = 2
text = "/xx"
label_settings = ExtResource("9_d8qfv")

[node name="BulletCount" type="Label" parent="Control/AmmoCount"]
layout_mode = 2
text = "x"
label_settings = ExtResource("9_d8qfv")
horizontal_alignment = 1

[node name="Slots" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.051
offset_left = 1464.0
offset_top = 948.0
offset_right = 1796.08
offset_bottom = 1028.0
columns = 100

[node name="0" parent="Control/Slots" instance=ExtResource("5_rxypr")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="1" parent="Control/Slots" instance=ExtResource("5_rxypr")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="2" parent="Control/Slots" instance=ExtResource("5_rxypr")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="3" parent="Control/Slots" instance=ExtResource("5_rxypr")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="4" parent="Control/Slots" instance=ExtResource("5_rxypr")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="AmmoStorage" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 1517.0
offset_top = 897.0
offset_right = 1897.0
offset_bottom = 937.0
script = ExtResource("14_b0d78")
ammo_count_scene = ExtResource("14_lwwil")
